--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Zach Rollyson website.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx eleventy",
+    "serve": "npx eleventy --serve"
   },
   "author": {
     "name": "Zachary J Rollyson",
