style: add editor config, reformat

--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "zjr.io",
-  "version": "0.0.1",
-  "description": "Zach Rollyson website.",
-  "main": "index.js",
-  "scripts": {
-    "build": "npx eleventy",
-    "serve": "npx eleventy --serve"
-  },
-  "author": {
-    "name": "Zachary J Rollyson",
-    "email": "me@zjr.io",
-    "url": "https://zjr.io"
-  },
-  "license": "ISC",
-  "devDependencies": {
-    "@11ty/eleventy": "^2.0.1",
-    "browserslist": "^4.21.5",
-    "lightningcss": "^1.20.0"
-  }
+	"name": "zjr.io",
+	"version": "0.0.1",
+	"description": "Zach Rollyson’s website.",
+	"main": "index.js",
+	"scripts": {
+		"build": "npx eleventy",
+		"serve": "npx eleventy --serve"
+	},
+	"author": {
+		"name": "Zachary J Rollyson",
+		"email": "me@zjr.io",
+		"url": "https://zjr.io"
+	},
+	"license": "MIT",
+	"devDependencies": {
+		"@11ty/eleventy": "^2.0.1",
+		"browserslist": "^4.21.5",
+		"lightningcss": "^1.20.0",
+		"prettier": "^2.8.8"
+	}
 }
