--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@11ty/eleventy": "^2.0.1",
+		"@shopify/prettier-plugin-liquid": "^1.0.6",
 		"browserslist": "^4.21.5",
 		"lightningcss": "^1.20.0",
 		"prettier": "^2.8.8"
